--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet"/>
 </head>
 <body>
 <app-root></app-root>
+
+<script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
 </body>
 </html>
